--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -127,15 +127,16 @@
     "        else:\n",
     "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
     "\n",
-    "    # def extract_zip_file(self):\n",
-    "    #     unzip_path = self.config.unzip_dir\n",
-    "    #     try:\n",
-    "    #         os.makedirs(unzip_path, exist_ok=True)\n",
-    "    #         zip_file_path = self.config.local_data_file\n",
-    "    #         shutil.unpack_archive(zip_file_path, unzip_path)\n",
-    "    #         logger.info(f\"Zip file {zip_file_path} extracted successfully to {unzip_path}\")\n",
-    "    #     except Exception as e:\n",
-    "    #         logger.error(f\"Error extracting zip file: {e}\")"
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)"
    ]
   },
   {
@@ -155,35 +156,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-08-10 05:30:25,249] INFO: common: Yaml file: config\\config.yaml loaded sucessfully]\n",
-      "[2023-08-10 05:30:25,258] INFO: common: Yaml file: params.yaml loaded sucessfully]\n",
-      "[2023-08-10 05:30:25,264] INFO: common: Directory: artifacts created sucessfully]\n",
-      "[2023-08-10 05:30:25,265] INFO: common: Directory: artifacts/data_ingestion created sucessfully]\n",
-      "[2023-08-10 05:30:32,588] INFO: 461578954: artifacts/data_ingestion/data.zip downloaded! with following headers:\n",
+      "[2023-08-10 22:42:07,354] INFO: common: Yaml file: config\\config.yaml loaded sucessfully]\n",
+      "[2023-08-10 22:42:07,360] INFO: common: Yaml file: params.yaml loaded sucessfully]\n",
+      "[2023-08-10 22:42:07,363] INFO: common: Directory: artifacts created sucessfully]\n",
+      "[2023-08-10 22:42:07,368] INFO: common: Directory: artifacts/data_ingestion created sucessfully]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-08-10 22:42:24,555] INFO: 3233804986: artifacts/data_ingestion/data.zip downloaded! with following headers:\n",
       "Connection: close\n",
-      "Content-Length: 23627009\n",
+      "Content-Length: 7903594\n",
       "Cache-Control: max-age=300\n",
       "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
       "Content-Type: application/zip\n",
-      "ETag: \"2e7409b328d118a1d37018be788babf8bf9640386387da766ac100e96efa3b93\"\n",
+      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
       "Strict-Transport-Security: max-age=31536000\n",
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 0824:3529B0:1C4C3F:2735D6:64D4D6BA\n",
+      "X-GitHub-Request-Id: 7D96:565AC:210DB4:2EC184:64D5CA31\n",
       "Accept-Ranges: bytes\n",
-      "Date: Thu, 10 Aug 2023 12:30:25 GMT\n",
+      "Date: Fri, 11 Aug 2023 05:42:10 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-del21734-DEL\n",
-      "X-Cache: HIT\n",
+      "X-Served-By: cache-del21741-DEL\n",
+      "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1691670626.665740,VS0,VE1\n",
+      "X-Timer: S1691732529.250259,VS0,VE1601\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 0d521283a718326f6124d9f2e2dfcf77452a7a2e\n",
-      "Expires: Thu, 10 Aug 2023 12:35:25 GMT\n",
-      "Source-Age: 91\n",
+      "X-Fastly-Request-ID: eebef4c6710e5a36f692867e755ff1ba065bc001\n",
+      "Expires: Fri, 11 Aug 2023 05:47:10 GMT\n",
+      "Source-Age: 1\n",
       "\n",
       "]\n"
      ]
@@ -195,7 +202,7 @@
     "    data_ingestion_config = config.get_data_ingestion_config()\n",
     "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
     "    data_ingestion.download_file()\n",
-    "    # data_ingestion.extract_zip_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
