--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -156,17 +156,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-08-10 22:42:07,354] INFO: common: Yaml file: config\\config.yaml loaded sucessfully]\n",
-      "[2023-08-10 22:42:07,360] INFO: common: Yaml file: params.yaml loaded sucessfully]\n",
-      "[2023-08-10 22:42:07,363] INFO: common: Directory: artifacts created sucessfully]\n",
-      "[2023-08-10 22:42:07,368] INFO: common: Directory: artifacts/data_ingestion created sucessfully]\n"
+      "[2023-08-11 00:07:31,548] INFO: common: Yaml file: config\\config.yaml loaded sucessfully]\n",
+      "[2023-08-11 00:07:31,554] INFO: common: Yaml file: params.yaml loaded sucessfully]\n",
+      "[2023-08-11 00:07:31,558] INFO: common: Directory: artifacts created sucessfully]\n",
+      "[2023-08-11 00:07:31,558] INFO: common: Directory: artifacts/data_ingestion created sucessfully]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-08-10 22:42:24,555] INFO: 3233804986: artifacts/data_ingestion/data.zip downloaded! with following headers:\n",
+      "[2023-08-11 00:07:35,606] INFO: 3233804986: artifacts/data_ingestion/data.zip downloaded! with following headers:\n",
       "Connection: close\n",
       "Content-Length: 7903594\n",
       "Cache-Control: max-age=300\n",
@@ -177,19 +177,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 7D96:565AC:210DB4:2EC184:64D5CA31\n",
+      "X-GitHub-Request-Id: 09CE:19F162:B48F2:F8C92:64D5DE34\n",
       "Accept-Ranges: bytes\n",
-      "Date: Fri, 11 Aug 2023 05:42:10 GMT\n",
+      "Date: Fri, 11 Aug 2023 07:07:33 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-del21741-DEL\n",
+      "X-Served-By: cache-del21725-DEL\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1691732529.250259,VS0,VE1601\n",
+      "X-Timer: S1691737652.321232,VS0,VE879\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: eebef4c6710e5a36f692867e755ff1ba065bc001\n",
-      "Expires: Fri, 11 Aug 2023 05:47:10 GMT\n",
+      "X-Fastly-Request-ID: 7abde35994f947633c5f428eae9a2f1449f59f9a\n",
+      "Expires: Fri, 11 Aug 2023 07:12:33 GMT\n",
       "Source-Age: 1\n",
       "\n",
       "]\n"
