--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -53,9 +53,9 @@
     "\n",
     "@dataclass(frozen=True)\n",
     "class DataTransformationConfig:\n",
-    "    root_dir=Path\n",
-    "    data_sir=Path\n",
-    "    tokenizer_name = Path"
+    "    root_dir: Path\n",
+    "    data_path: Path\n",
+    "    tokenizer_name: Path"
    ]
   },
   {
@@ -75,7 +75,10 @@
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(self, config_filepath = CONFIG_FILE_PATH, params_filepath = PARAMS_FILE_PATH):\n",
+    "    def __init__(self, \n",
+    "        config_filepath = CONFIG_FILE_PATH, \n",
+    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "\n",
@@ -86,8 +89,8 @@
     "        create_directories([config.root_dir])\n",
     "        data_transformation_config = DataTransformationConfig(\n",
     "            root_dir= config.root_dir,\n",
-    "            STATUS_FILE= config.STATUS_FILE,\n",
-    "            ALL_REQUIRED_FILES= config.ALL_REQUIRED_FILES\n",
+    "            data_path= config.data_path,\n",
+    "            tokenizer_name= config.tokenizer_name\n",
     "        )\n",
     "        return data_transformation_config"
    ]
@@ -96,7 +99,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ASUS\\miniconda3\\envs\\textS\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from textSummarizer.logging import logger\n",
@@ -106,22 +118,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataValidation:\n",
+    "class DataTransformation:\n",
     "    def __init__(self, config: DataTransformationConfig):\n",
-    "        self.config = config\n",
-    "        self.tokenizer = AutoTokenizer.from_pretrained(config.tokenizer_name)"
+    "        self.config = config \n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(config.tokenizer_name)\n",
+    "\n",
+    "    def convert_examples_to_features(self, example_batch):\n",
+    "        input_encodings = self.tokenizer(example_batch['dialogue'], max_length=1024, truncation=True)\n",
+    "\n",
+    "        with self.tokenizer.as_target_tokenizer():\n",
+    "            target_encodings = self.tokenizer(example_batch['summary'], max_length=128, truncation=True)\n",
+    "\n",
+    "        return {\n",
+    "            'input_ids': input_encodings['input_ids'],\n",
+    "            'attention_mask': input_encodings['attention_mask'],\n",
+    "            'labels': target_encodings['input_ids']\n",
+    "        }\n",
+    "    \n",
+    "    def convert(self):\n",
+    "        dataset_samsum = load_from_disk(self.config.data_path)\n",
+    "        dataset_samsum_pt = dataset_samsum.map(self.convert_examples_to_features, batched=True)\n",
+    "        dataset_samsum_pt.save_to_disk(os.path.join(self.config.root_dir, \"samsum_dataset\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-08-11 00:08:10,994] INFO: common: Yaml file: config\\config.yaml loaded sucessfully]\n",
+      "[2023-08-11 00:08:11,002] INFO: common: Yaml file: params.yaml loaded sucessfully]\n",
+      "[2023-08-11 00:08:11,005] INFO: common: Directory: artifacts created sucessfully]\n",
+      "[2023-08-11 00:08:11,007] INFO: common: Directory: artifacts/data_transformation created sucessfully]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]c:\\Users\\ASUS\\miniconda3\\envs\\textS\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3635: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "Map: 100%|██████████| 14732/14732 [00:15<00:00, 945.99 examples/s] \n",
+      "Map: 100%|██████████| 819/819 [00:00<00:00, 849.59 examples/s]\n",
+      "Map: 100%|██████████| 818/818 [00:01<00:00, 653.67 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 14732/14732 [00:00<00:00, 84931.06 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 819/819 [00:00<00:00, 34841.57 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 818/818 [00:00<00:00, 30438.81 examples/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_transformation_config = config.get_data_transformation_config()\n",
+    "    data_transformation = DataTransformation(config=data_transformation_config)\n",
+    "    data_transformation.convert()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
   }
  ],
  "metadata": {
